.archive/clusters/homelab-1/.network-policies/allow-egress-to-blocky/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-blocky
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: blocky
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              networking/allow-egress-to-blocky: "true"
      ports:
        - protocol: UDP
          port: 53
